<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:textColor="@color/myBlue"
            android:id="@+id/title"
            android:text="@string/titre"
            android:layout_marginEnd="15dp"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:src="@drawable/home_address"
            android:layout_gravity="center_vertical"
            android:layout_width="40dp"
            android:layout_height="40dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:src="@drawable/email"
            android:scaleType="fitXY"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="25dp"
            android:layout_width="150dp"
            android:layout_height="150dp" />

        <TextView
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="#FF5722"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:text="@string/cr_er_vos_alertes"
            android:id="@+id/titre"
            android:textSize="20sp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_gravity="center_horizontal"
            android:id="@+id/message"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:text="@string/creer_alerts_message"
            android:textSize="16sp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:text="@string/commencer_button"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:padding="10dp"
        android:id="@+id/commencer"
        android:background="@drawable/commencer_bg"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>